Configuration cache support - minimal Gradle version 7.4 required Refactoring and clean up